完成个人资料设置，接下来是完成后台管理部分的创建员工和创建工作区 之后就是添加加入工作区的逻辑，然后完成工作项的逻辑

--- a/SyncArea/SyncArea/Components/Layout/NavMenu.razor
+++ b/SyncArea/SyncArea/Components/Layout/NavMenu.razor
@@ -1,7 +1,10 @@
-﻿
+﻿@inject UserCRUDService UserCRUDService
 <MudNavMenu>
     <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">工作区</MudNavLink>
-
+    @if(UserCRUDService.isAdmin)
+    {
+    <MudNavLink Href="/BackendManagement" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">后台管理</MudNavLink>
+    }
 </MudNavMenu>
 
 
