--- a/SyncArea/SyncArea/Components/_Imports.razor
+++ b/SyncArea/SyncArea/Components/_Imports.razor
@@ -11,5 +11,6 @@
 @using SyncArea
 @using SyncArea.Components
 @using Microsoft.AspNetCore.Identity
+@using SyncArea.Services
 @using System.ComponentModel.DataAnnotations
 @using Microsoft.AspNetCore.Authorization
