--- a/SyncArea/SyncArea/Components/Layout/MainLayout.razor
+++ b/SyncArea/SyncArea/Components/Layout/MainLayout.razor
@@ -10,7 +10,8 @@
         <MudText Typo="Typo.h5" Class="ml-3">SyncArea</MudText>
         <MudSpacer />
         <MudIconButton Icon="@(DarkLightModeButtonIcon)" Color="Color.Inherit" OnClick="@DarkModeToggle" />
-        <MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="Color.Inherit" Edge="Edge.End" />
+@inject UserCRUDService UserCRUDService
+        <MudIconButton Icon="@Icons.Material.Outlined.AccountCircle" Edge="Edge.End" Color="Color.Primary" Href="/AccountSettingPage" />
     </MudAppBar>
     <MudDrawer id="nav-drawer" @bind-Open="_drawerOpen" ClipMode="DrawerClipMode.Always" Elevation="2">
         <NavMenu />
@@ -28,7 +29,7 @@
 </div>
 
 @code {
-    private bool _drawerOpen ;
+    private bool _drawerOpen =true;
     private bool _isDarkMode ;
     private MudTheme? _theme = null;
 
