开始完成工作区 的 工作项

--- a/SyncArea/SyncArea/Components/Layout/NavMenu.razor
+++ b/SyncArea/SyncArea/Components/Layout/NavMenu.razor
@@ -3,7 +3,7 @@
     <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">工作区</MudNavLink>
     @if(UserCRUDService.isAdmin)
     {
-    <MudNavLink Href="/BackendManagement" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">后台管理</MudNavLink>
+    <MudNavLink Href="/admin" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.ManageAccounts">后台管理</MudNavLink>
     }
 </MudNavMenu>
 
