--- a/SyncArea/SyncArea/Components/Pages/WorkspaceDetail.razor
+++ b/SyncArea/SyncArea/Components/Pages/WorkspaceDetail.razor
@@ -1,6 +1,7 @@
 ﻿@page "/workspace/{WorkspaceId:guid}"
 @using Microsoft.AspNetCore.Authorization
 @using SyncArea.Identity.Models
+@using SyncArea.Misc
 @using SyncArea.Services
 @attribute [Authorize]
 @inject WorkItemService WorkItemService
@@ -8,33 +9,61 @@
 @inject IDialogService DialogService
 @inject NavigationManager Navigation
 
-<MudCard>
+<MudCard Elevation="0" >
     <MudCardHeader>
-        <MudText Typo="Typo.h5">@Workspace?.Name</MudText>
+        <MudText Typo="Typo.h5" Color="Color.Primary">工作区名称: @Workspace?.Name</MudText>
         <MudSpacer />
-        <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="ShowCreateWorkItemDialog">添加工作项</MudButton>
+        <MudButton Variant="Variant.Outlined" Color="Color.Primary" OnClick="ShowCreateWorkItemDialog">添加工作项</MudButton>
     </MudCardHeader>
     <MudCardContent>
-        @if (GroupedWorkItems.Any())
+        @if (IsLoading)
         {
-            <MudList T="WorkItem">
+        <MudProgressCircular Indeterminate="true" Color="Color.Primary" />
+        }
+        else if (GroupedWorkItems.Any())
+        {
+        <div  id="container" style="max-height:80vh;overflow:auto">
+            <MudXOutline ScrollContainerSelector="#container">
                 @foreach (var group in GroupedWorkItems)
                 {
-                    <MudListItem>
-                        <MudText Typo="Typo.h6">@group.Key.ToString("yyyy-MM-dd")</MudText>
-                        <MudList Subheader="工作项">
-                            @foreach (var item in group)
+                        var date = group.Key.Date.ToString("yyyy-MM-dd");
+                <MudXOutlineSection Title="@date">
+                       <MudExpansionPanels>
+                                <MudExpansionPanel Text="@date">
+                                    <MudPaper Outlined Class="pa-4">
+
+                             @foreach (var item in group)
                             {
-                                <MudListItem>
-                                    <MudText>备注: @(item.Remark ?? "无")</MudText>
                                     <MudText>创建者: @item.Username</MudText>
+                                    <MudText>备注: @(item.Remark ?? "无")</MudText>
                                     <MudText>图片数: @item.PhotoCount</MudText>
-                                </MudListItem>
+                                    @if (item.PhotoPreviews.Any())
+                                    {
+                                        <MudGrid Class="mt-2">
+                                            @foreach (var preview in item.PhotoPreviews)
+                                            {
+                                                <MudItem xs="6" sm="4">
+                                                    <MudImage Src="@($"data:image/jpeg;base64,{preview}")" Alt="照片" Width="100" Height="100" ObjectFit="ObjectFit.Cover" />
+                                                </MudItem>
+                                            }
+                                        </MudGrid>
+                                    }
+                                    else
+                                    {
+                                        <MudText Color="Color.Info">无照片</MudText>
+                                    }
+                                    <MudDivider></MudDivider>
                             }
-                        </MudList>
-                    </MudListItem>
+                                    </MudPaper>
+                                </MudExpansionPanel>
+                       </MudExpansionPanels>
+                    </MudXOutlineSection>
+
+
                 }
-            </MudList>
+                </MudXOutline>
+
+            </div>
         }
         else
         {
@@ -48,6 +77,7 @@
     private WorkspaceDto? Workspace { get; set; }
     private List<WorkItemDto> WorkItems { get; set; } = new();
     private IEnumerable<IGrouping<DateTime, WorkItemDto>> GroupedWorkItems => WorkItems.GroupBy(wi => wi.Date.Date);
+    private bool IsLoading { get; set; } = true;
 
     protected override async Task OnInitializedAsync()
     {
@@ -58,6 +88,7 @@
             return;
         }
         WorkItems = await WorkItemService.GetWorkItemsByWorkspaceAsync(WorkspaceId);
+        IsLoading = false;
     }
 
     private async Task ShowCreateWorkItemDialog()
@@ -65,8 +96,13 @@
         var parameters = new DialogParameters
         {
             { "WorkspaceId", WorkspaceId },
-            { "OnWorkItemCreated", EventCallback.Factory.Create(this, async () => await OnInitializedAsync()) }
+            { "OnWorkItemCreated", EventCallback.Factory.Create(this, async () =>
+            {
+                IsLoading = true;
+                await OnInitializedAsync();
+                IsLoading = false;
+            }) }
         };
-        await DialogService.ShowAsync<CreateWorkItemDialog>("添加工作项", parameters);
+        await DialogService.ShowAsync<CreateWorkItemDialog>("添加工作项", parameters, AppliationSettings.DialogOptions);
     }
 }
