--- a/SyncArea/SyncArea/Components/Pages/Admin/Admin.razor
+++ b/SyncArea/SyncArea/Components/Pages/Admin/Admin.razor
@@ -5,6 +5,7 @@
 @inject UserService UserService
 @inject WorkspaceService WorkspaceService
 @inject IDialogService DialogService
+@inject ShareService ShareService
 
 <MudGrid>
     <MudItem xs="12">
@@ -19,8 +20,10 @@
                     <Columns>
                         <PropertyColumn Title="账号" Property="x=>x.Username"></PropertyColumn>
                         <PropertyColumn Title="角色" Property="x=>x.Role"></PropertyColumn>
+                        <PropertyColumn Title="姓名" Property="x=>x.Name"></PropertyColumn>
                         <TemplateColumn Title="操作">
                             <CellTemplate>
+                                <MudButton Variant="Variant.Text" Color="Color.Primary" OnClick="() => ShowEditUserDialog(context.Item)">修改</MudButton>
                                 <MudButton Variant="Variant.Text" Color="Color.Primary" OnClick="() => ShowAddToWorkspaceDialog(context.Item)">添加到工作区</MudButton>
                                 <MudButton Variant="Variant.Text" Color="Color.Primary" OnClick="() => ShowViewWorkspacesDialog(context.Item)">查看工作区</MudButton>
                                 <MudButton Variant="Variant.Text" Color="Color.Error" OnClick="() => DeleteUser(context.Item.Id)">删除</MudButton>
@@ -45,8 +48,8 @@
                 <MudDataGrid @ref="WorkspaceGrid" ServerData="LoadWorkspaces" T="WorkspaceDto" MultiSelection="false"  FixedFooter Style="max-height:60vh" FixedHeader>
                     <Columns>
 
-                        <PropertyColumn Title="房间名" Property="x=>x.Name"></PropertyColumn>
-                        <PropertyColumn Title="房间号" Property="x=>x.RoomNumber"></PropertyColumn>
+                        <PropertyColumn Title="项目名" Property="x=>x.Name"></PropertyColumn>
+                        <PropertyColumn Title="项目号" Property="x=>x.RoomNumber"></PropertyColumn>
                         <PropertyColumn Title="创建时间" Property="x=>x.CreatedAt"></PropertyColumn>
                         <PropertyColumn Title="密码" Property="x=>x.Password"></PropertyColumn>
                         <TemplateColumn Title="操作">
@@ -69,6 +72,7 @@
     private MudDataGrid<UserDto> UserGrid = null!;
     private MudDataGrid<WorkspaceDto> WorkspaceGrid = null!;
 
+  
     private async Task<GridData<UserDto>> LoadUsers(GridState<UserDto> state)
     {
         var users = await UserService.GetUsersAsync(state.Page + 1, state.PageSize);
@@ -78,7 +82,15 @@
             TotalItems = (await UserService.GetUsersAsync()).Count
         };
     }
-
+    private async Task ShowEditUserDialog(UserDto user)
+    {
+        var parameters = new DialogParameters
+        {
+            { "User", user },
+            { "OnUserUpdated", EventCallback.Factory.Create<string>(this, async () => await UserGrid.ReloadServerData()) }
+        };
+        await DialogService.ShowAsync<EditUserDialog>("编辑用户", parameters, AppliationSettings.DialogOptions);
+    }
     private async Task<GridData<WorkspaceDto>> LoadWorkspaces(GridState<WorkspaceDto> state)
     {
         var workspaces = await WorkspaceService.GetWorkspacesAsync(state.Page + 1, state.PageSize);
