--- a/SyncArea/SyncArea/Components/Pages/Admin/ViewUserWorkspacesDialog.razor
+++ b/SyncArea/SyncArea/Components/Pages/Admin/ViewUserWorkspacesDialog.razor
@@ -11,6 +11,8 @@
                 <PropertyColumn Title="名称" Property="x => x.Name" />
                 <PropertyColumn Title="房间号" Property="x => x.RoomNumber" />
                 <PropertyColumn Title="创建时间" Property="x => x.CreatedAt" />
+                   @* 一个删除按钮 *@
+
             </Columns>
         </MudDataGrid>
     </MudCardContent>
