后台管理页面完善，开始完善工作区

--- a/SyncArea/SyncArea/Components/App.razor
+++ b/SyncArea/SyncArea/Components/App.razor
@@ -16,6 +16,8 @@
     <Routes @rendermode="@(new InteractiveServerRenderMode(false))" />
     <script src="_framework/blazor.web.js"></script>
 
+    <script src="./_content/Blazor.QrCodeGen/qrcode.min.js"></script>
+    <script type="module" src="./_content/Blazor.QrCodeGen/qrcodeInterop.js"></script>
     <script src=@Assets["_content/MudBlazor/MudBlazor.min.js"]></script>
 </body>
 
