--- a/SyncArea/SyncArea/Components/Pages/Home.razor
+++ b/SyncArea/SyncArea/Components/Pages/Home.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 @page "/workspaces"
-@attribute [Authorize(Policy = "WorkspaceMember")]
+@attribute [Authorize]
 @using Microsoft.AspNetCore.Authorization
 @using SyncArea.Identity.Models
 @using SyncArea.Services
