--- a/SyncArea/SyncArea/Components/Pages/Admin/ViewUserWorkspacesDialog.razor
+++ b/SyncArea/SyncArea/Components/Pages/Admin/ViewUserWorkspacesDialog.razor
@@ -1,6 +1,6 @@
 ﻿@inject UserService UserService
 @inherits MudComponentBase
-
+@inject IDialogService DialogService
 <MudCard Outlined Class="pa-4 ma-4">
     <MudCardHeader>
         <MudText Typo="Typo.h6">用户的工作区</MudText>
@@ -11,8 +11,12 @@
                 <PropertyColumn Title="名称" Property="x => x.Name" />
                 <PropertyColumn Title="房间号" Property="x => x.RoomNumber" />
                 <PropertyColumn Title="创建时间" Property="x => x.CreatedAt" />
-                   @* 一个删除按钮 *@
-
+                @* 一个删除按钮 *@
+                <TemplateColumn>
+                    <CellTemplate>
+                        <MudButton Color="Color.Error" Variant="Variant.Outlined" OnClick="@(()=>DeleteWorkSpace(context.Item))">删除</MudButton>
+                    </CellTemplate>
+                </TemplateColumn>
             </Columns>
         </MudDataGrid>
     </MudCardContent>
@@ -33,6 +37,15 @@
         Workspaces = await UserService.GetUserWorkspacesAsync(UserId);
     }
 
+    private async Task DeleteWorkSpace(WorkspaceDto workspaceDto)
+    {
+        var result = await DialogService.ShowMessageBox(UserId, $"确定要删除工作区 {workspaceDto.Name} 吗？","删除", "取消");
+        if (result.HasValue && !result.Value)
+            return;
+        await UserService.RemoveUserFromWorkSpace(workspaceDto, UserId);
+        Workspaces = await UserService.GetUserWorkspacesAsync(UserId);
+        await InvokeAsync(StateHasChanged);
+    }
     private void Cancel()
     {
         MudDialog.Cancel();
